# NomadCities

./: .gitignore  README.md
src/: .env  docker-compose.yml  package-lock.json
src/backend/: Dockerfile
src/backend/app/: alembic.ini  pyproject.toml
src/backend/app/alembic/: env.py
src/backend/app/alembic/versions/: fb9cfc69f707_main_revision.py
src/backend/app/app/: backend_pre_start.py  initial_data.py  main.py
src/backend/app/app/api/: api.py  deps.py
src/backend/app/app/api/endpoints/: city.py  comments.py  tag.py  users.py
src/backend/app/app/api/utils/: __init__.py  db.py  security.py
src/backend/app/app/classes/: elasticsearch.py  sentiment_analysis.py
src/backend/app/app/core/: settings.py
src/backend/app/app/crud/: city.py  city_image.py  comment.py  recommendations.py  tag.py  user.py
src/backend/app/app/db/: avg_function.py  engine.py  init_db.py
src/backend/app/app/db/models/: assign_city.py  assign_user.py  base.py  city.py  city_image.py  city_suggested.py  city_tag.py  comment.py  tag.py  user.py  user_suggested.py  user_tag.py
src/backend/app/app/models/: city.py  city_image.py  comment.py  tag.py  token.py  user.py
src/backend/app/app/tests/: conftest.py
src/backend/app/app/tests/api/: test_cities.py  test_comments.py  test_tags.py  test_users.py
src/backend/app/app/tests/utils/: db.py  utils.py
src/backend/crontab/: Dockerfile  city_recommendations.py  crontab  (+1 more)
src/db/: create-multiple-postgresql-databases.sh
src/frontend/: Dockerfile  cypress.config.js  package-lock.json  package.json  tailwind.config.mjs
(+81 files in other folders)
