[tool.poetry]
name = "."
version = "0.1.0"
description = ""
authors = ["fjromeero <franjaviro2001@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
pydantic = "<2.0"
gunicorn = "^21.2.0"
sqlalchemy = "^1.3.16"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
tenacity = "^8.2.3"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
